--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="api.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
